--- a/MLProject/conda.yaml
+++ b/MLProject/conda.yaml
@@ -1,8 +1,9 @@
 name: mlproject_env
 channels:
   - conda-forge
+  - defaults
 dependencies:
-  - python=3.8
+  - python=3.12.6
   - pip
   - pandas
   - scikit-learn
