--- a/.github/workflows/mlflow-ci.yml
+++ b/.github/workflows/mlflow-ci.yml
@@ -22,6 +22,10 @@ jobs:
         run: |
           conda update -n base -c defaults conda --yes
 
+      - name: Conda Init
+        run: |
+          conda init bash # Atau zsh, tergantung shell defaultnya
+
       - name: Clear Conda Cache
         run: |
           conda clean --all --yes
