--- a/.github/workflows/mlflow-ci.yml
+++ b/.github/workflows/mlflow-ci.yml
@@ -46,7 +46,7 @@ jobs:
         id: mlflow-run
         run: |
           cd MLProject # Make sure you are in the directory before running
-          conda run -n mlflowproject_env mlflow run . --no-conda > output.txt
+          mlflow run . > output.txt
           run_id=$(grep -oP 'Run ID: \K[\w]+' output.txt)
           echo "run_id=$run_id" >> $GITHUB_OUTPUT
 
