--- a/.github/workflows/mlflow-ci.yml
+++ b/.github/workflows/mlflow-ci.yml
@@ -38,41 +38,60 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd MLProject 
-          conda env create -f conda.yaml
+          cd MLProject
+          conda env create -f conda.yaml --name mlflowproject_env
+          conda activate mlflowproject_env
+          conda install -c conda-forge mlflow  # Memastikan mlflow terinstal di environment yang benar
           conda run -n mlflowproject_env pip install -r requirements.txt
-          conda run -n mlflowproject_env pip install mlflow
 
       - name: Run MLflow project
         id: mlflow-run
         run: |
           cd MLProject # Make sure you are in the directory before running
+          conda activate mlflowproject_env # Pastikan environment diaktifkan
           conda run -n mlflowproject_env mlflow run . > output.txt
-          run_id=$(grep -oP 'Run ID: \K[\w]+' output.txt)
-          echo "run_id=$run_id" >> $GITHUB_OUTPUT
+          python -c "
+          import re
+          with open('output.txt', 'r') as f:
+              output = f.read()
+          match = re.search(r'Run ID: (\w+)', output)
+          if match:
+              run_id = match.group(1)
+              print(f'::set-output name=run_id::{run_id}')
+          else:
+              print('Run ID not found in output.')
+          "
 
         env:
-          MLFLOW_TRACKING_URI: file:./mlruns
+          MLFLOW_TRACKING_URI: file:./mlruns #Ganti dengan Tracking Server
 
       - name: Upload Model as Artifact
         uses: actions/upload-artifact@v4
         with:
           name: mlflow-model
-          path: MLProject/mlruns/0/*/artifacts/model
+          path: MLProject/mlruns/0/${{ steps.mlflow-run.outputs.run_id }}/artifacts/model
 
       - name: Commit and push if changed
         run: |
           git config --global user.email "margaretalolalilullita@gmail.com"
           git config --global user.name "margaretalola"
           git add .
-          git commit -m "Retrained model (CI)" -a || echo "No changes to commit"
-          git push origin main
+          if git diff --cached --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "Retrained model (CI)" -a
+            git push origin main
+          fi
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Build and Push Docker Image
         run: |
           echo "${{ secrets.DOCKERHUB_PAT }}" | docker login -u margaretalola --password-stdin
+          conda activate mlflowproject_env # Pastikan environment diaktifkan
           conda run -n mlflowproject_env mlflow models build-docker -m runs:/"${{ steps.mlflow-run.outputs.run_id }}"/model -n margaretalola/course-recommendation-model:latest
           docker push margaretalola/course-recommendation-model:latest
         env:
           DOCKER_USERNAME: margaretalola
-          TRACKING_URI: http://localhost:5000
+          MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_URI }} # Ganti dengan tracking server URI
