--- a/.github/workflows/mlflow-ci.yml
+++ b/.github/workflows/mlflow-ci.yml
@@ -38,32 +38,21 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd MLProject
-          conda env create -f conda.yaml --name mlflowproject_env
-          conda activate mlflowproject_env
-          conda install -c conda-forge mlflow  # Memastikan mlflow terinstal di environment yang benar
+          cd MLProject 
+          conda env create -f conda.yaml
           conda run -n mlflowproject_env pip install -r requirements.txt
+          conda run -n mlflowproject_env pip install mlflow
 
       - name: Run MLflow project
         id: mlflow-run
         run: |
           cd MLProject # Make sure you are in the directory before running
-          conda activate mlflowproject_env # Pastikan environment diaktifkan
           conda run -n mlflowproject_env mlflow run . > output.txt
-          python -c "
-          import re
-          with open('output.txt', 'r') as f:
-              output = f.read()
-          match = re.search(r'Run ID: (\w+)', output)
-          if match:
-              run_id = match.group(1)
-              print(f'::set-output name=run_id::{run_id}')
-          else:
-              print('Run ID not found in output.')
-          "
+          run_id=$(grep -oP 'Run ID: \K[\w]+' output.txt)
+          echo "run_id=$run_id" >> $GITHUB_OUTPUT
 
         env:
-          MLFLOW_TRACKING_URI: file:./mlruns #Ganti dengan Tracking Server
+          MLFLOW_TRACKING_URI: file:./mlruns
 
       - name: Upload Model as Artifact
         uses: actions/upload-artifact@v4
@@ -76,22 +65,14 @@ jobs:
           git config --global user.email "margaretalolalilullita@gmail.com"
           git config --global user.name "margaretalola"
           git add .
-          if git diff --cached --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "Retrained model (CI)" -a
-            git push origin main
-          fi
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+          git commit -m "Retrained model (CI)" -a || echo "No changes to commit"
+          git push origin main
 
       - name: Build and Push Docker Image
         run: |
           echo "${{ secrets.DOCKERHUB_PAT }}" | docker login -u margaretalola --password-stdin
-          conda activate mlflowproject_env # Pastikan environment diaktifkan
           conda run -n mlflowproject_env mlflow models build-docker -m runs:/"${{ steps.mlflow-run.outputs.run_id }}"/model -n margaretalola/course-recommendation-model:latest
           docker push margaretalola/course-recommendation-model:latest
         env:
           DOCKER_USERNAME: margaretalola
-          MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_URI }} # Ganti dengan tracking server URI
+          TRACKING_URI: http://localhost:5000
