--- a/.github/workflows/mlflow-ci.yml
+++ b/.github/workflows/mlflow-ci.yml
@@ -62,8 +62,9 @@ jobs:
 
       - name: Commit and push if changed
         run: |
-          git config --global user.email "margaretalolalilullita@gmail.com"
+          git config --global user.email "margaretalolalilulita@gmail.com"
           git config --global user.name "margaretalola"
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git add .
           git commit -m "Retrained model (CI)" -a || echo "No changes to commit"
           git push origin main
