--- a/.github/workflows/mlflow-ci.yml
+++ b/.github/workflows/mlflow-ci.yml
@@ -26,15 +26,13 @@ jobs:
       - name: Conda Init
         shell: bash
         run: |
-          conda init bash && source ~/.bashrc # Load the updated bash configuration
+          conda init bash && source ~/.bashrc
 
       - name: Clear Conda Cache
-        run: |
-          conda clean --all --yes
+        run: conda clean --all --yes
 
       - name: Set Conda Channel Priority
-        run: |
-          conda config --set channel_priority strict
+        run: conda config --set channel_priority strict
 
       - name: Install dependencies
         run: |
@@ -43,17 +41,19 @@ jobs:
           conda run -n mlflowproject_env pip install -r requirements.txt
           conda run -n mlflowproject_env pip install mlflow
 
-      - name: Run MLflow project
+      - name: Run MLflow project and extract run_id
         id: mlflow-run
         run: |
           cd MLProject
           source /usr/share/miniconda/etc/profile.d/conda.sh
           conda activate mlflowproject_env
 
-          RUN_OUTPUT=$(mlflow run . --env-manager=local --experiment-name Course-Recommendation -P some-param=value)
-          echo "$RUN_OUTPUT"
+          echo "Running MLflow project..."
+          mlflow run . --env-manager=local --experiment-name Course-Recommendation -P some-param=value > output.txt
 
-          RUN_ID=$(echo "$RUN_OUTPUT" | grep -oP "Run (ID|with ID) '\K[0-9a-f]{32}")
+          echo "Extracting run_id from logs..."
+          RUN_ID=$(grep -oE "Run \(ID '[a-f0-9]+'\)" output.txt | sed -E "s/Run \(ID '([a-f0-9]+)'\)/\1/")
+          echo "Run ID: $RUN_ID"
           echo "run_id=$RUN_ID" >> $GITHUB_OUTPUT
         env:
           MLFLOW_TRACKING_URI: file:./mlruns
@@ -70,10 +70,7 @@ jobs:
           git config --global user.name "margaretalola"
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
 
-          # Hanya commit file yang relevan (tidak termasuk model besar)
           git add .
-          git status
-
           git diff-index --quiet HEAD || git commit -m "Retrained model (CI)"
           git push origin main
 
@@ -84,4 +81,3 @@ jobs:
           docker push margaretalola/course-recommendation-model:latest
         env:
           DOCKER_USERNAME: margaretalola
-          TRACKING_URI: http://localhost:5000
