--- a/.github/workflows/mlflow-ci.yml
+++ b/.github/workflows/mlflow-ci.yml
@@ -26,7 +26,8 @@ jobs:
       - name: Conda Init
         shell: bash
         run: |
-          conda init bash && source ~/.bashrc
+          conda init bash
+          source ~/.bashrc
 
       - name: Clear Conda Cache
         run: conda clean --all --yes
@@ -36,13 +37,15 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd MLProject 
+          cd MLProject
           conda env create -f conda.yaml
           conda run -n mlflowproject_env pip install -r requirements.txt
           conda run -n mlflowproject_env pip install mlflow
 
       - name: Run MLflow project and extract run_id
         id: mlflow-run
+        env:
+          MLFLOW_TRACKING_URI: file:./mlruns
         run: |
           cd MLProject
           source /usr/share/miniconda/etc/profile.d/conda.sh
@@ -54,9 +57,14 @@ jobs:
           echo "Extracting run_id from logs..."
           RUN_ID=$(grep -oE "Run \(ID '[a-f0-9]+'\)" output.txt | sed -E "s/Run \(ID '([a-f0-9]+)'\)/\1/")
           echo "Run ID: $RUN_ID"
+
+          if [ -z "$RUN_ID" ]; then
+            echo "ERROR: run_id not found in mlflow output."
+            cat output.txt
+            exit 1
+          fi
+
           echo "run_id=$RUN_ID" >> $GITHUB_OUTPUT
-        env:
-          MLFLOW_TRACKING_URI: file:./mlruns
 
       - name: Upload Model as Artifact
         uses: actions/upload-artifact@v4
@@ -75,9 +83,11 @@ jobs:
           git push origin main
 
       - name: Build and Push Docker Image
-        run: |
-          echo "${{ secrets.DOCKERHUB_PAT }}" | docker login -u margaretalola --password-stdin
-          conda run -n mlflowproject_env mlflow models build-docker -m runs:/${{ steps.mlflow-run.outputs.run_id }}/model -n margaretalola/course-recommendation-model:latest
-          docker push margaretalola/course-recommendation-model:latest
         env:
           DOCKER_USERNAME: margaretalola
+        run: |
+          echo "${{ secrets.DOCKERHUB_PAT }}" | docker login -u $DOCKER_USERNAME --password-stdin
+          conda run -n mlflowproject_env mlflow models build-docker \
+            -m runs:/${{ steps.mlflow-run.outputs.run_id }}/model \
+            -n margaretalola/course-recommendation-model:latest
+          docker push margaretalola/course-recommendation-model:latest
