--- a/.github/workflows/mlflow-ci.yml
+++ b/.github/workflows/mlflow-ci.yml
@@ -53,9 +53,14 @@ jobs:
 
           echo "Extracting run_id from logs..."
           RUN_ID=$(grep -oP "(?<=Run \(ID ')[a-f0-9]+(?='\))" output.txt)
+          if [ -z "$RUN_ID" ]; then
+            echo "Error: run ID not found in logs."
+            exit 1
+          fi
+          echo "Run ID: $RUN_ID"
           echo "run_id=$RUN_ID" >> $GITHUB_OUTPUT
-        env:
-          MLFLOW_TRACKING_URI: file:./mlruns
+          env:
+            MLFLOW_TRACKING_URI: file:./mlruns
 
       - name: Upload Model as Artifact
         uses: actions/upload-artifact@v4
